Fix front-end CSS page stretching.

--- a/vault/fe_assets/frontend.css
+++ b/vault/fe_assets/frontend.css
@@ -60,7 +60,7 @@ a:active,a:focus{color:red}
 input[id=logoutbutton]{border-top-{FE_Align}-radius:0;border-bottom-{FE_Align}-radius:0;padding-{FE_Align}:18px;margin-{FE_Align}:-1px;background-position:center {FE_Align} 4px;background-image:url('?phpmussel-asset=lock_rd_o.png&theme={theme}')}
 input[id=logoutbutton]:hover,input[id=logoutbutton]:active,input[id=logoutbutton]:focus{background-image:url('?phpmussel-asset=lock_rd_c.png&theme={theme}')}
 input[id=homebutton]{border-top-{FE_Align_Reverse}-radius:0;border-bottom-{FE_Align_Reverse}-radius:0;margin-{FE_Align_Reverse}:0}
-.big,.h1f,.h2f,.h3f,.h4f,.rf{white-space:nowrap}
+.h1f,.h2f,.h3f,.h4f,.rf{white-space:nowrap}
 @media only all and (max-width:640px) {
   .big,.dt{display:none}
   .mob{display:block}
